--- a/Ex27.ipynb
+++ b/Ex27.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMdZN4C6izOvDmEHXfuYX6L",
+      "authorship_tag": "ABX9TyNJKeL2lF+ppewMb1ksgQ4G",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,21 +28,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 11,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "RVK3I216tHXF",
-        "outputId": "3a26a580-9553-4729-e48c-6b83022fa75e"
+        "outputId": "6f370a9e-52e0-46d0-81b3-f27e2cfdffb0"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Nhap 2 so: 6 999\n",
-            "Tong s =  499485\n"
+            "Nhap 2 so: -6 5\n",
+            "Tong s =  -6\n"
           ]
         }
       ],
@@ -52,13 +52,16 @@
         "\n",
         "  s = 0\n",
         "\n",
+        "  i = a\n",
+        "\n",
         "  if a > b:\n",
         "    print('err: a > b')\n",
         "\n",
         "  else:\n",
         "\n",
-        "    for i in range(a, b + 1):\n",
+        "    while i <= b:\n",
         "      s += i\n",
+        "      i += 1\n",
         "\n",
         "    print('Tong s = ', s)\n",
         "\n",
